cosmetic stuff, index improved, Monitor_nD finished started isotropic-sqw help, new stuff in samples and sources
git-svn-id: https://svn.mccode.org/svn/McStasTeX@80 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Monitor_Optimizer.tex
+++ b/trunk/Monitor_Optimizer.tex
@@ -3,6 +3,7 @@
 \section{Monitor\_Optimizer: Optimization locations for the\\
   Source\_Optimizer}
 \label{monitor-optimizer}
+\index{Sources!Optimization location|see{Sources/Optimizer}}\index{Optimization}
 \component{Source\_Optimizer}{E. Farhi}{optim\_comp}{$x_{min}$, $x_{max}$, $y_{min}$,$y_{max}$}{not fully validated}
 
 The {\bf Monitor\_Optimizer} component works with the {\bf
