--- a/trunk/Source_Optimizer.tex
+++ b/trunk/Source_Optimizer.tex
@@ -2,9 +2,10 @@
 
 \section{Source\_Optimizer: A general Optimizer for McStas}
 \label{source-optimizer}
+\index{Sources!Optimizer}\index{Optimization}
 \component{Source\_Optimizer}{E. Farhi}{options}{bins, step, keep}{not fully validated}
 
-This component is not exactly a source, but rather a neutron beam modifier. It must be positioned after the source, anywhere in the instrument description.
+This component is not exactly a source, but rather a neutron beam modifier. It should be positioned after the source, anywhere in the instrument description.
 
 The component {\bf Source\_Optimizer} optimizes the whole neutron flux
 in order to achieve better statistics at each {\bf Monitor\_Optimizer}
