--- a/trunk/Source_adapt.tex
+++ b/trunk/Source_adapt.tex
@@ -3,8 +3,8 @@
 \section{Source\_adapt: A neutron source with adaptive importance sampling}
 \label{s:Source_adapt}
 \label{s:source-adapt}
-\index{s:source-adapt}
 \index{Optimization}
+\index{Sources!Adaptative source}
 
 The {\bf Source\_adapt} component is a neutron source that uses adaptive
 importance sampling to improve the efficiency of the simulations. It
