--- a/trunk/arm.tex
+++ b/trunk/arm.tex
@@ -1,6 +1,7 @@
 \section{Arm: The generic component}
 \label{explain:arm}
 \component{Arm}{System}{(none)}{(none)}{}
+\index{Optics!Point in space (Arm, Optical bench)}
 
 The component {\bf Arm} is empty; is resembles an optical bench
 and has no effect on the neutron.
