--- a/trunk/chopper.tex
+++ b/trunk/chopper.tex
@@ -2,6 +2,7 @@
 
 \section{Chopper: The disc chopper}
 \label{s:chopper}
+\index{Optics!Disc chopper}
 
 \component{Chopper}{Phillipp Bernhardt}{$w$, $R$, $f$, $n$, $\phi$}{IsFirst, $n_{\rm pulse}$}{}
 
