--- a/trunk/collimator_linear.tex
+++ b/trunk/collimator_linear.tex
@@ -1,5 +1,5 @@
 \section{Collimator\_linear: The simple Soller blade collimator}
-\label{collimator-linear}
+\label{collimator-linear}\index{Optics!Linear collimator}
 
 \component{Collimator\_linear}{System}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $L$, $\delta$ (in deg.)}{}{}
 
