--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -334,12 +334,13 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
        {\bf MCSTAS/data} & Description \\
        \hline
- *.lau & Laue pattern file, as issued from Crystallographica or FullProf.
+ *.lau & Laue pattern file, as issued from Crystallographica or FullProf. Used e.g. for Powder1, PowderN, Single\_crystal
        Data: [ h   k   l Mult. d-space 2Theta   F-squared ] \\
  *.trm & transmission file, typically for monochromator crystals and filters.
        Data: [ k (Angs-1) , Transmission (0-1) ] \\
  *.rfl & reflectivity file, typically for mirrors and monochromator crystals.
        Data: [ k (Angs-1) , Reflectivity (0-1) ] \\
+ *.sqw & Sample dynamical structure factors, e.g. for Isotropic\_Sqw. Data: Vector $q$, then vector $omega$, then matrix $S(q,\omega)$. \\
       \hline
     \end{tabular}
     \caption{Data files of the \MCS\ library.}
