--- a/trunk/divpos_monitor.tex
+++ b/trunk/divpos_monitor.tex
@@ -1,6 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{DivPos\_monitor: A divergence and position sensitive monitor}
+\index{Monitors!Divergence/position monitor}
 \component{DivPos\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_{\rm h}$, $\eta_{\rm h,max}$, filename}{}{}
 
 {\bf DivPos\_monitor} is a two-dimensional monitor component,
@@ -23,5 +24,5 @@ The arrays are written to a file and can be read e.g. by the tool
 {\bf MC\_plot}, see the system manual.
 
 This component can easily be change into being sensitive
-to $y$ and vetical divergence but ROTATE'ing it
+to $y$ and vertical divergence but ROTATE'ing it
 90 degrees around the $z$ direction.
