--- a/trunk/e_monitor.tex
+++ b/trunk/e_monitor.tex
@@ -1,6 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{E\_monitor: The energy-sensitive monitor}
+\index{Monitors!Energy monitor}
 \component{E\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $E_{\rm min}$, $E_{\rm max}$, filename}{}{}
 
 The component {\bf E\_monitor} resembles {\bf TOF\_monitor}
