--- a/trunk/filter.tex
+++ b/trunk/filter.tex
@@ -1,5 +1,7 @@
 \section{Filter\_gen: A general filter using a transmission table}
 \label{filter-gen}
+\index{Optics!Filter}
+\index{Sources!from 1D table input}
 
 \component{Filter\_gen}{System}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $file$}{$options$}{validated, flat filter}
 
