--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -56,6 +56,7 @@ neutrons, neutrons for which the reflectivity is lower than about
 $10^{-10}$ are ABSORB'ed.
 
 \section{Mirror: The single mirror}
+\index{Optics!Single mirror plate}
 
 \component{Mirror}{System}{$l$, $h$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
 
@@ -84,6 +85,7 @@ This component may produce wrong results with gravitation support.
 
 
 \section{Guide: The guide section}
+\index{Optics!Guide}
 
 \component{Guide}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
 
@@ -184,6 +186,7 @@ This component may produce wrong results with gravitation support. Use Guide\_gr
 
 \section{Guide\_channeled: A guide section component with multiple channels}
 \label{s:channeled_guide}
+\index{Optics!Guide with channels (non focusing)}
 
 \component{Guide\_channeled}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m_x, m_y$}{$d, R_0, Q_{cx}, Q_{cy}, W, \alpha_x, \alpha_y$}{validated, no gravitation support}
 
@@ -217,6 +220,7 @@ This component may produce wrong results with gravitation support. Use Guide\_gr
 
 \section{Guide\_gravity: A guide section component with multiple channels and gravitation handling}
 \label{s:guide_gravity}
+\index{Optics!Guide with channels and gravitation handling}
 
 \component{Guide\_gravity}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m$}{$d, R_0, Q_c, W, \alpha$, wavy, chamfers, $k_h$, $n$, $G$}{fully validated, {\bf with} gravitation support}
 
