--- a/trunk/l_monitor.tex
+++ b/trunk/l_monitor.tex
@@ -3,6 +3,7 @@
 
 \section{L\_monitor: The wavelength sensitive monitor}
 \label{s:L_monitor}
+\index{Monitors!Wavelength monitor}
 
 \component{L\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $\lambda_{\rm min}$, $\lambda_{\rm max}$, filename}{}{}
 
