--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -342,3 +342,11 @@
 @misc{mczilla_webpage,
    note      = {See http://neutron.risoe.dk/McZilla/}
 }
+
+@article{Ageron89,
+   author    = {P. Ageron},
+   journal   = {Nucl. Inst. Meth. A},
+   pages     = {197},
+   year      = {1989},
+   volume    = {284}
+}
