--- a/trunk/monitors.tex
+++ b/trunk/monitors.tex
@@ -1,6 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \chapter{Monitors and detectors}
+\index{Library!Components!monitors}
 
 In real neutron experiments, detectors and monitors play quite
 different roles. One wants the detectors to be as efficient as
