--- a/trunk/monochromator_flat.tex
+++ b/trunk/monochromator_flat.tex
@@ -2,6 +2,7 @@
 
 \section{Monochromator\_flat: An infinitely thin, flat mosaic crystal with
 a single scattering vector}
+\index{Optics!Monochromator}
 \label{s:monochromator_flat}
 
 \component{Monochromator\_flat}{System}{$z_{\rm min}$, $z_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $\eta_{\rm h}$, $\eta_{\rm v}$, $r_0$, $Q$}{$d_{\rm m}$}{}
