--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -1,10 +1,11 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \chapter{Beam optical components:
-Arms, slits, collimators, choppers, guides, monochromators}
+Arms, slits, collimators}
 This chapter contains a number of optical components
 that is used to modify the neutron beam in various ways,
 as well as the ``generic'' component {\bf Arm}.
+\index{Library!Components!optics}
 
 \input{arm}
 
