--- a/trunk/psd_monitor.tex
+++ b/trunk/psd_monitor.tex
@@ -2,6 +2,7 @@
 
 \section{PSD\_monitor: The PSD monitor}
 \component{PSD\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_y$, filename}{}{}
+\index{Monitors!Position sensitive detector (PSD)}
 
 
 The component {\bf PSD\_monitor} resembles other monitors, e.g.
