--- a/trunk/res_monitor.tex
+++ b/trunk/res_monitor.tex
@@ -2,6 +2,7 @@
 
 \section{Res\_monitor: The detector for resolution calculation}
 \label{s:res_monitor}
+\index{Monitors!Resolution monitor|see{Samples/Resolution function}}
 
 \component{Res\_monitor}{System, Alan Tennant}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, filename, res\_sample, buffer size}{$x_w$, $y_h$, $z_t$, options}{}
 
