--- a/trunk/res_sample.tex
+++ b/trunk/res_sample.tex
@@ -2,6 +2,7 @@
 
 \section{Res\_sample: A uniform scatterer for resolution calculation}
 \label{s:res_sample}
+\index{Samples!Resolution function, sample for}
 
 \component{Res\_sample}{System, Alan Tennant}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm focus}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $E_0$, $\Delta E$ }{$x_w$, $y_h$, $z_t$, $x_{\rm focus}$, $y_{\rm focus}$, $a_{\rm v, focus}$, $a_{\rm h, focus}$, target index}{}
 
