--- a/trunk/sans.tex
+++ b/trunk/sans.tex
@@ -1,5 +1,7 @@
 \section{Sans\_spheres: A sample of hard spheres for small-angle scattering}
 \label{sans}
+\index{Samples!Dilute colloid medium}
+\index{Diffraction}
 
 \component{Sans\_spheres}{System, Lise Arleth}{$R$, $x_w$, $y_h$, $z_t$, $r$, $\sigma_a$}{$phi$, $q_{max}$, $\Delta \rho$}{}
 
