--- a/trunk/slit.tex
+++ b/trunk/slit.tex
@@ -1,5 +1,6 @@
 \section{Slit: A beam defining diaphragm}
 \label{slit}
+\index{Optics!Slit}
 
 \component{Slit}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{$p_{\rm cut}$}{}
 
