--- a/trunk/source_div.tex
+++ b/trunk/source_div.tex
@@ -1,6 +1,6 @@
 \section{Source\_div: A divergent source}
 \label{source-div}
-\index{Sources!Source\_div}
+\index{Sources!Divergent source}
 
 \component{Source\_div}{System}{ $w$, $h$, $\delta_h$, $\delta_v$, $E_0$, $\Delta E$}{$\lambda_0$, $d\lambda$, gauss}{Validated, position is the center of area}
 
