--- a/trunk/source_maxwell.tex
+++ b/trunk/source_maxwell.tex
@@ -1,7 +1,7 @@
 \section{Source\_Maxwell\_3: A simple continuous source
 with a Maxwellian spectrum}
 \label{source-maxwell}
-\index{Sources!Source\_Maxwell\_3}
+\index{Sources!Maxwellian source (continuous)}
 
 \component{Source\_Maxwell\_3}{System}{ $h$, $w$, $d_{\rm foc}$, $xw$, $yh$, $\lambda_{\rm low}$, $\lambda_{\rm high}$, $I_1$, $T_1$}{$I_2$, $T_2$, $I_3$, $T_3$}{validated}
 
