--- a/trunk/v_selector.tex
+++ b/trunk/v_selector.tex
@@ -1,5 +1,6 @@
 \section{V\_selector: A rotating velocity selector}
 \label{vselector}
+\index{Optics!Velocity selector}
 
 \component{V\_selector}{System}{$L_0$, $L_1$, $\omega$, $r_0$, $\phi$, $N$}{}{validated, position is center of input aperture}
 
