--- a/trunk/virtual_input.tex
+++ b/trunk/virtual_input.tex
@@ -1,5 +1,6 @@
 \section{Vitual\_input: Starting the second part of a split simulation}
 \label{virtual_input}
+\index{Sources!Virtual source from stored neutron events}
 
 \component{Virtual\_input}{System}{filename}{repeat count, type}{}
 
