--- a/trunk/virtual_output.tex
+++ b/trunk/virtual_output.tex
@@ -1,5 +1,6 @@
 \section{Vitual\_output: Saving the first part of a split simulation}
 \label{virtual_output}
+\index{Sources!Virtual source, recording neutron events}
 
 \component{Virtual\_output}{System}{filename}{buffer size, type}{}
 
