--- a/trunk/div_monitor.tex
+++ b/trunk/div_monitor.tex
@@ -1,6 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{Divergence\_monitor: A divergence sensitive monitor}
+\index{Monitors!Divergence monitor}
 \component{Divergence\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm v}$, $n_{\rm h}$, $\eta_{\rm v,max}$, $\eta_{\rm h,max}$, filename}{}{}
 
 
