--- a/trunk/powder2.tex
+++ b/trunk/powder2.tex
@@ -42,7 +42,7 @@ where the normalization is taken to be $P(0)=1$.
   \begin{center}
     \psfrag{l1}{$l_1$}
     \psfrag{l2}{$l_2$}
-    \psfrag{lfull}{$l_{\rm full}$} 
+    \psfrag{lfull}{$l_{\rm full}$}
     \includegraphics[width=0.6\textwidth]{figures/scatter.eps}
   \end{center}
 \caption{The geometry of a scattering event within a powder sample.}
@@ -59,11 +59,11 @@ this interval into the solid angle $\Omega$ {\em and}
 not being scattered further
 or absorbed on the way out of the sample is
 \begin{equation}
-\Pi(l_1,\Omega) dl d\Omega = 
+\Pi(l_1,\Omega) dl d\Omega =
   \mu^s P(l_1) P(l_2) \gamma(\Omega) d\Omega dl ,
 \end{equation}
 where $\gamma(\Omega)$ is the directional distribution
-of the scattered neutrons, and $l_2$ is determined by $l_1$, 
+of the scattered neutrons, and $l_2$ is determined by $l_1$,
 $\Omega$, and the sample geometry, see figure \ref{powderFig}.
 
 In our Monte-Carlo simulations, we will often choose the scattering
@@ -72,14 +72,14 @@ from a distribution different from $\Pi(l_1,\Omega)$.
 By doing this, we must adjust $\pi_i$ according to
 the probability transformation rule (\ref{probrule}).
 If we {\em e.g.}\ choose the scattering depth, $l_1$,
-from a flat distribution in $[ 0 ; l_{\rm full} ]$, 
+from a flat distribution in $[ 0 ; l_{\rm full} ]$,
 and choose the directional dependence from $g(\Omega)$,
 we have a Monte Carlo probability
 \begin{equation}
 f(l_1,\Omega) = g(\Omega) / l_{\rm full} ,
 \end{equation}
 $l_{\rm full}$ is here the path length through the sample
-as taken by a non-scattered neutron (although we here 
+as taken by a non-scattered neutron (although we here
 assume that all simulated neutrons are being scattered).
 According to (\ref{probrule}), the neutron weight factor
 is now adjusted by the amount
@@ -90,13 +90,13 @@ is now adjusted by the amount
 \end{equation}
 
 In analogy with the source components, it is possible to define
-interesting directions for the scattering.  
+interesting directions for the scattering.
 One will then try to focus the scattered neutrons,
-choosing a $g(\Omega)$, which peaks around these directions. 
+choosing a $g(\Omega)$, which peaks around these directions.
 To do this, one uses (\ref{sampleprob}), where the
 fraction $\gamma(\Omega)/g(\Omega)$ corrects for the focusing.
 One must choose a proper distribution so that
-$g(\Omega) > 0$ in every interesting direction. If this is not the 
+$g(\Omega) > 0$ in every interesting direction. If this is not the
 case, the Monte Carlo simulation gives incorrect results.
 
 All samples of the powder type have been constructed with a focusing
@@ -104,6 +104,8 @@ and a non-focusing option.
 
 
 \section{Powder1: A general powder sample}
+\index{Samples!Powder, single diffraction line}
+\index{Diffraction}
 \subsection{General considerations}
 An ideal powder sample consists of many small
 crystallites, although each crystallite is sufficiently
@@ -127,7 +129,7 @@ are realised in a powder sample, the neutrons are scattered within a
     \includegraphics[width=0.6\textwidth]{figures/powder.eps}
   \end{center}
 \caption{The scattering geometry of a powder sample showing the
-Debye-Scherrer cone and the Debye-Scherrer circle.} 
+Debye-Scherrer cone and the Debye-Scherrer circle.}
 \label{coneFig}
 \end{figure}
 
@@ -137,10 +139,10 @@ Equation (\ref{Bragg}) may be cast into the form
 \end{equation}
 where {\bf Q} is a vector of the reciprocal lattice, and {\bf k} is
 the wave vector of the neutron. It is seen that only
-reciprocal vectors fulfilling $|{\bf Q}| < 2 |{\bf k}|$ 
+reciprocal vectors fulfilling $|{\bf Q}| < 2 |{\bf k}|$
 contribute to the scattering.
 For a complete treatment of the powder sample, one needs to take
-into account all these {\bf Q}-values, since each of them contribute 
+into account all these {\bf Q}-values, since each of them contribute
 to the attenuation.
 
 The textbook expression for the scattering intensity
@@ -150,9 +152,9 @@ much larger than the beam cross section, reads \cite{bacon}
 \label{e:slab}
 \frac{P}{P_0} &=& \frac{\lambda^3 l_s}{4\pi r} \frac{\rho'}{\rho}
          t j N_c^2 |F({\bf Q})|^2 \exp(-2W)
-         \frac{\exp(-\mu^{\rm a} t / cos \theta)}{\sin^2(2\theta)} \\ 
-|F({\bf Q})|^2 &=& 
- \left| \sum_j b_j \exp({\bf R}_j \cdot {\bf Q}) \right|^2 , 
+         \frac{\exp(-\mu^{\rm a} t / cos \theta)}{\sin^2(2\theta)} \\
+|F({\bf Q})|^2 &=&
+ \left| \sum_j b_j \exp({\bf R}_j \cdot {\bf Q}) \right|^2 ,
 \end{eqnarray}
 where the sum in the structure factor runs over all atoms in one unit cell.
 The meanings and units of the symbols are
@@ -174,7 +176,7 @@ $\mu^a$ & m$^{-1}$ & Linear attenuation factor due to absorption. \\
 In analogy with this, the textbook expression for a cylinder shaped powder
 sample, completely illuminated by the beam, reads \cite{bacon}
 \begin{equation}
-\frac{P}{\Psi_0} = 
+\frac{P}{\Psi_0} =
  \frac{V \rho'}{\rho} N_c^2 |F({\bf Q})|^2 j \exp(-2W)
                     \frac{A_{hkl}}{\sin(\theta)\sin(2\theta)}
                     \frac{l_s}{2\pi r} \frac{\lambda^3}{4} ,
@@ -218,20 +220,20 @@ linear attenuation coefficient in the material due to scattering
 \mu^s \equiv -\frac{1}{P_0} \frac{d(P/f_d)}{dl}
   = \frac{Q}{V} j \exp(-2W) \cos(\theta) .
 \end{equation}
-A powder sample will in general have several allowed reflections 
-${\bf Q}_j$, which will all contribute to the attenuation. 
-These reflections will have different values of 
-$|F({\bf Q}_j)|^2$ (and hence of $Q_j$), $j_j$, $\exp(-2W_j)$, 
+A powder sample will in general have several allowed reflections
+${\bf Q}_j$, which will all contribute to the attenuation.
+These reflections will have different values of
+$|F({\bf Q}_j)|^2$ (and hence of $Q_j$), $j_j$, $\exp(-2W_j)$,
 and $\theta_j$.
 The total attenuation through the sample due to scattering is given by
-$\mu^s = \mu_{\rm inc}^s + \sum_j \mu^s_j $, 
+$\mu^s = \mu_{\rm inc}^s + \sum_j \mu^s_j $,
 where $\mu_{\rm inc}^s$ represents the incoherent scattering.
 
 \subsection{This implementation}
-For component {\bf Powder1}, we assume that the sample 
-has the shape of a solid cylinder. 
+For component {\bf Powder1}, we assume that the sample
+has the shape of a solid cylinder.
 Further, the incoherent scattering is only taken into account
-by the attenuation of the beam, given by (\ref{e:attenu}) 
+by the attenuation of the beam, given by (\ref{e:attenu})
 and $\sigma_c^a$.
 The incoherently scattered neutrons are not
 propagated through to the detector, but rather not generated at all.
@@ -239,7 +241,7 @@ Focusing is performed by only scattering into one angular
 interval, $d\phi$ of the Debye-Scherrer circle. The center of this
 interval is located at the point where the Debye-Scherrer circle
 intersects the half-plane defined by the initial velocity, ${\bf v}_{\rm i}$,
-and a user-specified vector, {\bf f}. 
+and a user-specified vector, {\bf f}.
 Multiple scattering is not implemented.
 
 The input parameters for this component are
@@ -256,7 +258,7 @@ $|F({\bf Q}_j)|^2$ & (fm)$^2$ &
  Structure factor \\
 $j$ & 1 & Multiplicity of reflection \\
 $\exp(-2W)$ & 1 & Debye-Waller factor \\
-$d\phi$ & deg & Angular interval of focusing \\ 
+$d\phi$ & deg & Angular interval of focusing \\
 $f_x$ & m & \\
 $f_y$ & m & Focusing vector\\
 $f_z$ & m & \\
