--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -1,6 +1,6 @@
 \section{Source\_gen: A general continuous source}
 \label{source-gen}
-\index{Sources!Source\_gen}
+\index{Sources!An All-in-One continuous source(Source\_gen)}
 
 \component{Source\_gen}{System, E. Farhi}{$w$, $h$, $xw$, $yh$, $E_0$, $\Delta E$, $T_1$, $T_2$, $T_3$, $I_1$, $I_2$, $I_3$ }{$r$, $\lambda_0$, $d\lambda$, $E_{min}$, $E_{max}$, $\lambda_{min}$, $\lambda_{max}$}{Validated for Maxwellian expressions, position is the center of area}
 
@@ -25,7 +25,7 @@ Maxwellian parameters for some sources are in the table given below. For some ca
     ILL Thermal(H2) & 683.7  & 0.5874e13& 257.7 & 2.5099e13 & 16.7 & 1.0343e12 & /2.25\\
     ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &            &\\
     \end{tabular}
-    \caption{Flux parameters for Source\_gen and Source\_Maxwell\_3}
+    \caption{Flux parameters for Source\_gen and Source\_Maxwell\_3. ILL cold sources data are obtained from \cite{Ageron89}.}
     \label{t:source-params}
   }
   \end{center}
