--- a/trunk/vanadium.tex
+++ b/trunk/vanadium.tex
@@ -3,6 +3,8 @@
 
 \section{V\_sample: An incoherent scatterer, the V-sample}
 \label{s:v_sample}
+\index{Samples!Incoherent isotropic scatterer (Vanadium)}
+\index{Incoherent elastic scattering}
 
 \component{V\_sample}{System}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm foc}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$}{$w_x$, $h_y$, $t_z$, $w_{\rm focus}, h_{\rm focus}$, $w_{\rm foc, angle}$, $h_{\rm foc, angle}$, \\ $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $V_0$, $f_{\rm pack}$, target\_index}{validated}
 
@@ -28,7 +30,7 @@ outer radius $r_{\rm o}$, and height $h$, see figure \ref{f:v-sample}.
 
 When calculating the neutron path length within
 the cylinder, the kernel function
-\verb+CYLINDER_INTERSECT+
+\verb+cylinder_intersect+
 is used twice, once for the outer radius and once
 for the inner radius.
 
